@@ -13,6 +13,7 @@
 <news>
 v2.1.16 (21/09/2017)
 - moved code around
+- added cache (experiment)
 </news>
 <platform>all</platform>
 <language>en</language>
