@@ -1,5 +1,6 @@
 v2.1.16 (21/09/2017)
 - moved code around
+- added cache (experiment)
 
 v2.1.15 (17/09/2017)
 - Speed up main menu
